# DiscPyth

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  GUIDELINES.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  bump_version.py  dutils.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  misc_report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cq checks.yml
DiscPyth/: __init__.py  discpyth.py  event.py  eventhandlers.py  structs.py  types.py  wsapi.py
DiscPyth/_misc/: parser.py  toparse.md
DiscPyth/ext/gopyjson/: __init__.py  decoder.py  encoder.py  scanner.py  struct.py
DiscPyth/types/: gateway.py
discpyth/: __init__.py  base_classes.py  constants.py  disc.py  disc_pyth.py  discpyth.py  endpoints.py  errors.py  event.py  eventhandlers.py  events.py  helpers.py  restapi.py  session.py  state.py  structs.py  utils.py  wsapi.py
discpyth/api/: endpoints.py  http.py  ratelimiter.py
discpyth/backends/: __init__.py
discpyth/backends/_anyio/: http.py
discpyth/backends/_curio/: http.py
discpyth/cache/: __init__.py
discpyth/fur_json/: __init__.py  decoder.py  encoder.py  scanner.py  struct.py
discpyth/http/: base.py  exceptions.py  types.py
misc/: README.md
misc/dev/: gsparse.py  parsing_structs.py
