[tool.poetry]
name = "discpyth"
version = "0.1.0"
description = "DiscPyth is an unofficial wrapper in Python for the official Discord API."
authors = ["arHSM <hanseungmin.ar@gmail.com>"]
license = "BSD-3-Clause License"

[tool.poetry.dependencies]
python = "^3.10"
wsproto = "^1.0.0"
httpx = "^0.21.1"
anyio = "^3.4.0"
curio = "^1.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pyright = "^1.1.225"
poethepoet = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poe.tasks]
    [tool.poe.tasks.fmt]
    help = "Format code with `black` and `isort`."
    sequence = [
        {cmd = "isort ./discpyth"},
        {cmd = "black ./discpyth"}
    ]

    [tool.poe.tasks.check]
    help = "Check formatting."
    sequence = [
        {cmd = "isort ./discpyth --check"},
        {cmd = "black ./discpyth --check"}
    ]

    [tool.poe.tasks.check_diff]
    help = "Check formatting, and print out the diff."
    sequence = [
        {cmd = "isort ./discpyth --check --diff"},
        {cmd = "black ./discpyth --check --diff"}
    ]

    [tool.poe.tasks.pyright]
    help = "Run pyright."
    cmd = "pyright ./discpyth --lib --warnings"
