[tool.poetry]
name = "discpyth"
version = "0.1.0"
description = "DiscPyth is a modular wrapper for the Discord API in python based off of discordgo"
authors = ["arHSM <hanseungmin.ar@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
discord-gateway = "^0.3.0"
attrs = "^21.4.0"
cattrs = "^1.10.0"
anyio = {version = "^3.5.0", optional = true}
orjson = {version = "^3.6.7", optional = true}
trio = {version = "^0.20.0", optional = true}
curio = {version = "^1.5", optional = true}
colorama = "^0.4.4"
h2 = "^4.1.0"
sniffio = "^1.2.0"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pyright = "^0.0.13"

[tool.poetry.extras]
trio = ["anyio", "trio"]
asyncio = ["anyio"]
curio = ["curio"]
speed = ["orjson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
